public/stylesheets/style.css
@import url('http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css');

* {
  font-family: 'Open Sans', sans-serif;
}

/*nav*/
.button {
	display:inline;
	position:absolute;
	right:50px;
	top:6px;
	z-index:999;
	font-size:30px;
}

.button a {
	text-decoration:none;
}

.btn-open:after {
	color: #1D605B;
	content:"\f0c9";
	font-family:"FontAwesome";
	transition-property:all .2s linear 0s;
	-moz-transition:all .2s linear 0s;
	-webkit-transition:all .2s linear 0s;
	-o-transition:all .2s linear 0s;
}

.btn-open:hover:after {
	color:#8B9F77;
}

.btn-close:after {
	color:#1D605B;
	content:"\f00d";
	font-family:"FontAwesome";
	transition-property:all .2s linear 0s;
	-moz-transition:all .2s linear 0s;
	-webkit-transition:all .2s linear 0s;
	-o-transition:all .2s linear 0s;
}

.btn-close:hover:after {
	color: #8B9F77;
}

/*overlay*/
.overlay {
	display:none;
	position:fixed;
	top:0;
	height:100%;
	width:100%;
	background:#8ACACC;
	overflow:auto;
	z-index:99;
}

.wrap {
	color:#e9e9e9;
	text-align:center;
	max-width:90%;
	margin:0 auto;
}

.wrap ul.wrap-nav {
  padding:150px 0px 100px;
}

.wrap ul.wrap-nav li {
  margin: 0 auto;
  display: inline-block;
	font-size: 3.5rem;
  font-weight: bold;
	vertical-align:top;
	width:24%;
	position:relative;
}

.wrap ul.wrap-nav li a {
	color:#EDE1C1;
	padding:8px 0;
	text-decoration:none;
	transition-property:all .2s linear 0s;
	-moz-transition:all .2s linear 0s;
	-webkit-transition:all .2s linear 0s;
	-o-transition:all .2s linear 0s;
}

.wrap ul.wrap-nav li a:hover {
	color: #DF001D;
}

.wrap ul.wrap-nav ul {
	padding:20px 0;
}

/*homepage*/
.homeMain {
  margin: 20rem auto;
}

.name {
  font-family: 'Open Sans', sans-serif;
  font-size: 7rem;
  color: #8ACACC;
  margin-left: -40px;
}

.name li {
  display: inline-block;
}

.p {
  font-weight: bolder;
  color: #EDE1C1;
}

.a2 {
  font-weight: bolder;
  color: #EDE1C1;
}

.r {
  font-weight: bolder;
  color: #EDE1C1;
}

.k {
  font-weight: bolder;
  color: #EDE1C1;
}

.homeMain h4 {
  color: #1D605B;
}

.mainAbout {
  margin-top: 15rem;
  color: #1D605B;
  padding-bottom: 10rem;
}

.mainAbout h1 {
  color: #8ACACC;
  font-weight: bolder;
}

.mainAbout a {
  color: #8B9F77;
}

.mainAbout a:hover {
  color: #DF001D;
  text-decoration: none;
}

img.peaceEmoji {
  height: 25px;
  width: auto;
}

/*contact page*/
.contactMain {
  text-align: center;
  margin: 20rem auto;
}

.contactMain h1 {
  color: #8ACACC;
  font-weight: bolder;
}

.contactMain li {
  list-style: none;
  display: inline;
  margin: 2rem;
}

.contactMain a {
  color: #8ACACC;
  text-decoration: none;
}

.contactMain a:hover {
  color: #DF001D;
  text-decoration: none;
}

/*projects page*/
.projectsMain {
  margin: 5rem auto;
}

.projectsMain h1 {
  color: #8ACACC;
  font-weight: bolder;
}

.projectsMain img {
  border: 5px solid #8ACACC;
  margin-top: 30px;
}

.mobileLink a {
  color: white;
}

.mobileLink a:hover {
  color: white;
}

/*project animation*/
.image-wrapper {
  overflow: hidden;
  position: relative;
  text-align: center;
  margin-top: 30px;
}

.image-wrapper img {
  width: 100%;
  height: 100%;
}

.image-overlay-content {
  width: 100%;
  height: 100%;
  position: absolute;
  overflow: hidden;
  top: 0;
  left: 0;
  padding: 20px;
}

.overlay-fade-in p {
  color: #1D605B;
  font-size: 1.5rem;
  opacity: 0;
  transition: all 0.2s linear;
}

.overlay-fade-in h2 {
  color: #1D605B;
  font-weight: bold;
}

.overlay-fade-in i {
  color: #8ACACC;
  padding: 10px;
}

.overlay-fade-in i:hover {
  color: #DF001D;
}

.overlay-fade-in a:hover {
  text-decoration: none;
}

.overlay-fade-in img {
  transition: all 0.2s linear;
}

.overlay-fade-in .image-overlay-content {
  opacity: 0;
  background-color: #EDE1C1;
  transition: all 0.4s ease-in-out;
}

.overlay-fade-in:hover img {
  transform: scale(1.2);
}

.overlay-fade-in:hover .image-overlay-content {
  opacity: 1;
}

.overlay-fade-in:hover h2, .overlay-fade-in p, .overlay-fade-in .button {
  opacity: 1;
}

.overlay-fade-in:hover p {
  transition-delay: 0.1s;
}

.overlay-fade-in:hover .button {
  transition-delay: 0.2s;
}

@media screen and (max-width:48em) {
	.wrap ul.wrap-nav>li {
		width:100%;
		padding:20px 0;
	}

	.wrap ul.wrap-nav {
		padding:30px 0px 0px;
	}

  .contactMain ul>li {
    width:100%;
    padding:20px 0;
    display: list-item;
    margin-left: -20px;
  }

  .overlay-fade-in h2 {
    font-size: 2rem;
    margin-top: -5px;
  }

}

@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 667px)
  and (-webkit-min-device-pixel-ratio: 2) {
  .button {
  	font-size: 8rem;
  }
  .wrap ul.wrap-nav>li {
		width:100%;
		padding:20px 0;
	}

	.wrap ul.wrap-nav {
		padding:30px 0px 0px;
	}

  .contactMain ul>li {
    width:100%;
    padding:20px 0;
    display: list-item;
    margin-left: -20px;
  }

  .wrap-nav li {
    font-size: 10rem;
  }

  .homeMain {
    width: 100%
  }

  .homeMain h4 {
    font-size: 6rem;
  }

  .name {
    width: 100%;
  }

  .name li {
    font-size: 15rem;
  }

  .contactMain li {
    font-size: 10rem;
  }

  .wrap ul.wrap-nav li {
    font-size: 10rem;
  }

  .image-wrapper {
    width: 80vw;
    margin-left: -20vw;

  }

  .mobileLink {
    text-align: center;
  }

  .mobileLink a {
    color: #8ACACC;
    font-size: 3rem;
  }
}

